<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/blue">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/to_do_list"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/to_do_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/to_do"/>
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/task_1_layout"
        app:layout_constraintBottom_toBottomOf="@id/task_1_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="visible"
        android:buttonTint="@color/white"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:hint="@string/task_1"
        app:layout_constraintTop_toBottomOf="@id/to_do_layout"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/task_1_layout"
        app:boxCornerRadiusBottomEnd="10sp"
        app:boxCornerRadiusBottomStart="10sp"
        app:boxCornerRadiusTopEnd="10sp"
        app:boxCornerRadiusTopStart="10sp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:inputType="text"
            android:id="@+id/task_1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:hint="@string/task_2"
        app:layout_constraintTop_toBottomOf="@id/task_1_layout"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/task_2_layout"
        app:boxCornerRadiusBottomEnd="10sp"
        app:boxCornerRadiusBottomStart="10sp"
        app:boxCornerRadiusTopEnd="10sp"
        app:boxCornerRadiusTopStart="10sp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/task_2"/>
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/task_2_layout"
        app:layout_constraintBottom_toBottomOf="@id/task_2_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="visible"
        android:buttonTint="@color/white"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:hint="@string/task_3"
        app:layout_constraintTop_toBottomOf="@id/task_2_layout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="50dp"
        android:id="@+id/task_3_layout"
        app:boxCornerRadiusBottomEnd="10sp"
        app:boxCornerRadiusBottomStart="10sp"
        app:boxCornerRadiusTopEnd="10sp"
        app:boxCornerRadiusTopStart="10sp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/task_3"/>
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/task_3_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/task_3_layout"
        android:visibility="visible"
        android:buttonTint="@color/white"/>

<com.google.android.material.textfield.TextInputLayout
    android:layout_width="370dp"
    android:layout_height="wrap_content"
    android:hint="@string/task_4"
    app:layout_constraintTop_toBottomOf="@id/task_3_layout"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginVertical="50dp"
    android:id="@+id/task_4_layout"
    app:boxCornerRadiusBottomEnd="10sp"
    app:boxCornerRadiusBottomStart="10sp"
    app:boxCornerRadiusTopEnd="10sp"
    app:boxCornerRadiusTopStart="10sp">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/task_4"/>
</com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/task_4_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/task_4_layout"
        android:visibility="visible"
        android:buttonTint="@color/white"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_menu_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/sky_blue"
        app:maxImageSize="50dp"
        android:contentDescription="@string/todo"
        android:focusable="true"
        android:tintMode="screen"/>


</androidx.constraintlayout.widget.ConstraintLayout>


